# livery

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/commands/: ticket.md
.claude/skills/new-ticket/: SKILL.md
docs/: config.md  first-setup.md  harness-api.md  patterns.md  runtimes.md
livery/: __init__.py  agent_hooks.py  attempts.py  capabilities.py  cli.py  config.py  cos_engines.py  dispatch.py  dispatch_hooks.py  dispatch_view.py  doctor.py  harness_assets.py  hire.py  hooks.py  init.py  linked_repo_assets.py  memory.py  onboard.py  paths.py  paths_safety.py  status.py  talk.py  telegram.py  upgrade.py  walkie.py  walkie_controller.py
livery/runtimes/: __init__.py  lm_studio.py  tools.py
tests/: conftest.py  test_agent_hooks.py  test_attempts.py  test_capabilities.py  test_cli_json_api.py  test_cli_version.py  test_dispatch.py  test_dispatch_hooks.py  test_dispatch_view.py  test_doctor.py  test_hire.py  test_hooks.py  test_init.py  test_lm_studio_runtime.py  test_memory.py  test_onboard.py  test_paths.py  test_paths_safety.py  test_status.py  test_talk.py  test_ticket_close.py  test_tools.py  test_upgrade.py  test_walkie.py  test_walkie_auto.py
